# smartscan

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  batch_scans.py  config.yaml  env.yml  main.py  scan_config.yaml  scan_settings.yaml  setup.cfg  simulator.py  smartscan.py  start_virtualSGM4.py  vSGM4 settings.yaml  vSGM4_server.py  virtualSGM4.py
notebooks/: 20230501  test tcp comms.ipynb  20230501 - Comms socket class.ipynb  20230522 - load data from file.ipynb  20230522 - testing the controller.ipynb  20230522 - the controller.ipynb  20230530 - gpcam testipynb.ipynb  20230530 - test reader.ipynb  20230531 - dev Scanner.ipynb  20230531 - random scan .ipynb  20230602 - measurement controller.ipynb  20230607 - measurement controller gpcam copy.ipynb  20230607 - measurement controller gpcam.ipynb  20230612 - from file simulation.ipynb  20230613 - GPcam working example.ipynb  20230613 - gpcam on ARPES data.ipynb  20230613 - timing gpcam.ipynb  20230619 - gpcam live tests.ipynb  20230620 - GPcam  copy.ipynb  20230620 - GPcam cost avoid repetitions.ipynb  20230620 - GPcam on Z018.ipynb  20230620 - GPcam on kiss05 - works.ipynb  20230622 - tcp data transfer.ipynb  log.txt  test.ipynb  test_h5py.ipynb
smartscan/: TCP.py  __init__.py  __main__.py  asyncscanner.py  commander.py  comms.py  controller.py  file.py  gpscanner.py  io.py  plot.py  preprocessing.py  reader.py  reduce.py  reductions.py  scanner.py  sgm4commands.py  simulator.py  smartscan.py  tasks.py  utils.py  virtualSGM4.py
smartscan/deprecated/: controller.py  reductions.py  scanner.py
smartscan/gp/: __init__.py  aquisition_functions.py  cost_functions.py  gp.py  plot.py
smartscan/gui/: __init__.py  core.py  gp.py  gui.py  plot.py  sgm4.py  tcp.py
smartscan/vis/: sparse.py  vornoi.py
tests/: test_client.py  test_server.py
tutorial/: Load and Visualize.ipynb
