[metadata]
name = smartscan
version = attr: smartscan.__version__
author = Steinn Ymir Agustsson
author_email = agustsson@phys.au.dk
url = https://github.com/ARPES-ASTRID/smartscan
description = A package for controlling nanoARPES scanning using machine learning
long_description = file: README.md
long_description_content_type = text/markdown
keywords = nanoARPES, photoemission, ARPES, ASTRID, synchrotron, beamline, data analysis, machine learning, deep learning, neural networks, autoencoder, denoising, denoising autoencoder
license = MIT
classifiers =
    License :: MIT License
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
[options]
packages = find:
zip_safe = True
include_package_data = False
install_requires =
    numpy >= 1.24
    xarray >= 2023.2
    tqdm >= 4.64
    h5py >= 3.8

[options.extras_require]
notebook =
    jupyter >=1.0.0
    matplotlib >= 3.7
    ipykernel >= 6.21
    ipympl >= 0.9
    ipywidgets

dev =
    pre-commit
    black==22.1.0
    flake8==4.0.1
