[metadata]
name = smartscan
version = attr: smartscan.__version__
author = Steinn Ymir Agustsson
author_email = agustsson@phys.au.dk
url = https://github.com/ARPES-ASTRID/smartscan
description = A software for controlling nanoARPES scanning using gaussian process regression
long_description = file: README.md
long_description_content_type = text/markdown
keywords = nanoARPES, photoemission, ARPES, ASTRID, synchrotron, beamline, data analysis, machine learning, scanning, gaussian process
license = GNU General Public License v3.0
classifiers =
    License :: GNU General Public License v3.0
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = True
include_package_data = False
install_requires =
    numpy >= 1.25
    xarray >= 2023.2
    scipy >= 1.7
    tqdm >= 4.64
    h5py >= 3.8
    matplotlib >= 3.7
    gpcam != 7.4.10
    fvgp != 3.3.8
    hgdl != 2.0.7

[options.extras_require]
notebook =
    jupyter >=1.0.0
    ipykernel >= 6.21
    ipympl >= 0.9
    ipywidgets
